# latincy-preprocess

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
rust/: Cargo.toml
rust/src/: lib.rs  long_s.rs  uv.rs
src/latincy_preprocess/: __init__.py  _strip.py  spacy.py
src/latincy_preprocess/diacritics/: __init__.py  _charset.py
src/latincy_preprocess/long_s/: __init__.py  _rules.py
src/latincy_preprocess/long_s/data/ngrams/: 4grams.json  bigrams.json  trigrams.json
src/latincy_preprocess/uv/: __init__.py  _rules.py
tests/: conftest.py  test_diacritics_charset.py  test_long_s_rules.py  test_parity.py  test_spacy.py  test_strip.py  test_uv_rules.py  test_uv_spacy.py
tests/data/: allowlist.json  approved_corrections.json  curated_test.json
